# SMG_Assignment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_08b2ada9efa0de1a___init___py.html  z_08b2ada9efa0de1a_main_py.html  z_08b2ada9efa0de1a_models_py.html  z_08b2ada9efa0de1a_training_py.html  z_4fe9fbc85f41931f_main_py.html  z_4fe9fbc85f41931f_schemas_py.html  z_4fe9fbc85f41931f_utils_py.html  z_8ba89f46916b1a2e___init___py.html  z_8ba89f46916b1a2e_dataloader_py.html  z_8ba89f46916b1a2e_preprocessing_py.html  z_8ba89f46916b1a2e_utils_py.html  z_9ad7226ca899664a_test_dataloader_py.html  z_9ad7226ca899664a_test_integration_py.html  z_9ad7226ca899664a_test_preprocessing_py.html  z_9ad7226ca899664a_test_training_py.html  z_e4d0983e0b10c261___init___py.html  z_f6557a55164303c4___init___py.html
mlruns/0/: meta.yaml
mlruns/0/1891f8db224945d49eebb2698a5b4e7c/: meta.yaml
mlruns/0/1891f8db224945d49eebb2698a5b4e7c/metrics/: cv_mean_r2  cv_std_r2  test_mae  test_mape  test_mse  test_r2  test_rmse
mlruns/0/1891f8db224945d49eebb2698a5b4e7c/tags/: mlflow.runName
mlruns/0/336dda7126844f7d8b49b3a774ea1a6d/: meta.yaml
mlruns/0/336dda7126844f7d8b49b3a774ea1a6d/metrics/: cv_mean_r2  cv_std_r2  test_mae  test_mape  test_mse  test_r2  test_rmse
mlruns/0/336dda7126844f7d8b49b3a774ea1a6d/tags/: mlflow.runName
mlruns/0/3718c06d62034b128d2904702c26b6b8/: meta.yaml
mlruns/0/3718c06d62034b128d2904702c26b6b8/metrics/: cv_mean_r2  cv_std_r2  test_mae  test_mape  test_mse  test_r2  test_rmse
mlruns/0/3718c06d62034b128d2904702c26b6b8/tags/: mlflow.runName
mlruns/0/56d3c73b7ebf4722b251a1324d6a4a85/: meta.yaml
mlruns/0/56d3c73b7ebf4722b251a1324d6a4a85/tags/: mlflow.runName
mlruns/0/5bbc3e8a4516441981bd96c82247038d/: meta.yaml
mlruns/0/5bbc3e8a4516441981bd96c82247038d/metrics/: cv_mean_r2  cv_std_r2  test_mae  test_mape  test_mse  test_r2  test_rmse
mlruns/0/5bbc3e8a4516441981bd96c82247038d/tags/: mlflow.runName
mlruns/0/6451a71ee939409cb299699955e3bc5e/: meta.yaml
mlruns/0/6451a71ee939409cb299699955e3bc5e/metrics/: cv_mean_r2  cv_std_r2  test_mae  test_mape  test_mse  test_r2  test_rmse
mlruns/0/6451a71ee939409cb299699955e3bc5e/tags/: mlflow.runName
mlruns/0/98b5b06dbe11407b9e71dac822aea2c6/: meta.yaml
mlruns/0/98b5b06dbe11407b9e71dac822aea2c6/tags/: mlflow.runName
mlruns/0/991a16ddb76a492583479778701afb48/: meta.yaml
mlruns/0/991a16ddb76a492583479778701afb48/metrics/: cv_mean_r2  cv_std_r2  test_mae  test_mape  test_mse  test_r2  test_rmse
mlruns/0/991a16ddb76a492583479778701afb48/tags/: mlflow.runName
mlruns/0/afafc58dd5d4410eabbafde60af16823/: meta.yaml
mlruns/0/afafc58dd5d4410eabbafde60af16823/metrics/: cv_mean_r2  cv_std_r2  test_mae  test_mape  test_mse  test_r2  test_rmse
mlruns/0/afafc58dd5d4410eabbafde60af16823/tags/: mlflow.runName
mlruns/0/b875b2ccee9a469581d6188b42a5eaa0/: meta.yaml
mlruns/0/b875b2ccee9a469581d6188b42a5eaa0/tags/: mlflow.runName
mlruns/0/ca754374afba41aabd19c84d50f2c84b/: meta.yaml
mlruns/0/ca754374afba41aabd19c84d50f2c84b/metrics/: cv_mean_r2  cv_std_r2  test_mae  test_mape  test_mse  test_r2  test_rmse
mlruns/0/d08787f2b7de402fbf0ae974646f13f9/: meta.yaml
mlruns/0/d08787f2b7de402fbf0ae974646f13f9/tags/: mlflow.runName
mlruns/0/fc93b038e3ad474eaea020d9d0cbfcd5/: meta.yaml
mlruns/0/fc93b038e3ad474eaea020d9d0cbfcd5/metrics/: cv_mean_r2  cv_std_r2  test_mae  test_mape  test_mse  test_r2  test_rmse
mlruns/0/fef8e31a9ed74653b0c69f679a5a319f/: meta.yaml
mlruns/380189385554122630/: meta.yaml
mlruns/380189385554122630/1af8340902384d67864b664d9bf3c65f/: meta.yaml
mlruns/380189385554122630/1e102a164c254fc1b21fdfce5e4bb065/: meta.yaml
mlruns/380189385554122630/2148b9ed126143e1a270fe32707f142c/: meta.yaml
mlruns/380189385554122630/2e981baf8dd84cb2a25f322e6d99752e/: meta.yaml
mlruns/380189385554122630/3010a54ca99e48cabb64c87335c9573b/: meta.yaml
mlruns/380189385554122630/6665234c837a4fb2a1abe73b511fa9a5/: meta.yaml
mlruns/380189385554122630/669a6cd7bfd4485e97699aafaf704236/: meta.yaml
mlruns/380189385554122630/81a4d0cde23e44f185754ef2f9c48b64/: meta.yaml
mlruns/380189385554122630/908759d179414dabaee4f5b364147e97/: meta.yaml
mlruns/380189385554122630/a418c7ba4ac54754b0533cc996ad019a/: meta.yaml
mlruns/380189385554122630/a5fbbe27df534ae39d8af73c736563cd/: meta.yaml
mlruns/380189385554122630/b7bf6d12554a4fbd900c8b3453aaf2d6/: meta.yaml
mlruns/380189385554122630/e061a93325ef4d3ea5cb442b16980cd8/: meta.yaml
mlruns/380189385554122630/f2503aa7810043a1a3d6490ebb5b5dcc/: meta.yaml
mlruns/429681546437772003/: meta.yaml
mlruns/429681546437772003/1df7805e38bb49b8844f175e013be6b2/: meta.yaml
mlruns/586601302795161863/: meta.yaml
mlruns/586601302795161863/1c17ad0c695c4365a2bb13cb91e755a4/: meta.yaml
mlruns/586601302795161863/2329277d523c4f73b5028a1402ba7757/: meta.yaml
mlruns/586601302795161863/40d6d979f6ae4fb4a339d3e08da04608/: meta.yaml
mlruns/586601302795161863/b525d00d578544199a4f4cc53fccf067/: meta.yaml
mlruns/586601302795161863/c3eb64e986e7405893153cb0b685dcac/: meta.yaml
mlruns/586601302795161863/c7898bd70a1248f485f97d5cc1808b00/: meta.yaml
mlruns/586601302795161863/eae67bcd2cf348d6a60fd3af420f98a7/: meta.yaml
mlruns/586601302795161863/ed32c6e3cf744e579e60b63a920ee7ab/: meta.yaml
mlruns/586601302795161863/f9b6edaddf26460b808eea91fc78a665/: meta.yaml
mlruns/models/CatBoost_House_Price_Predictor/: meta.yaml
task1/: preprocessing.py
task1/api/: main.py  schemas.py  utils.py
task1/data/: dataloader.py  dataset_schema.json  neighborhoods.csv  preprocessing.py  utils.py
task1/model_settings/: default_settings.json  experiment_settings1.json  experiment_settings2.json
task1/notebooks/: eda_and_preprocessing.ipynb
task1/tests/: test_integration.py
task1/training/: main.py  models.py  training.py
task2/tests/: test_dataloader.py  test_integration.py  test_preprocessing.py  test_training.py
(+359 files in other folders)
