[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = ["I"]
fix = true

[project]
name = "smg_assignment"
version = "0.1.0"
description = "SMG Assignment project with ML and FastAPI"
requires-python = ">=3.11"
dependencies = [
    "a2wsgi==1.10.10",
    "aiosqlite==0.21.0",
    "alembic==1.16.5",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "apache-airflow==3.0.6",
    "apache-airflow-core==3.0.6",
    "apache-airflow-providers-common-compat==1.7.3",
    "apache-airflow-providers-common-io==1.6.2",
    "apache-airflow-providers-common-sql==1.28.0",
    "apache-airflow-providers-smtp==2.2.1",
    "apache-airflow-providers-standard==1.7.0",
    "apache-airflow-task-sdk==1.0.6",
    "argcomplete==3.6.2",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.3.0",
    "asgiref==3.9.1",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "Authlib==1.6.4",
    "babel==2.17.0",
    "beautifulsoup4==4.13.5",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "cadwyn==5.4.4",
    "catboost==1.2.8",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cron_descriptor==2.0.6",
    "croniter==6.0.0",
    "cryptography==45.0.7",
    "cycler==0.12.1",
    "cyclopts==3.24.0",
    "databricks-sdk==0.65.0",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "Deprecated==1.2.18",
    "dill==0.4.0",
    "dnspython==2.8.0",
    "docker==7.1.0",
    "docstring_parser==0.17.0",
    "docutils==0.22.1",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.1",
    "fastapi==0.116.2",
    "fastapi-cli==0.0.12",
    "fastapi-cloud-cli==0.2.0",
    "fastjsonschema==2.21.2",
    "fastmcp==2.12.3",
    "Flask==3.1.2",
    "fonttools==4.59.2",
    "fqdn==1.5.1",
    "fsspec==2025.9.0",
    "geographiclib==2.1",
    "geopy==2.4.1",
    "gitdb==4.0.12",
    "GitPython==3.1.45",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "graphene==3.4.3",
    "graphql-core==3.2.6",
    "graphql-relay==3.2.0",
    "graphviz==0.21",
    "greenlet==3.2.4",
    "grpcio==1.75.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "importlib_metadata==8.7.0",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython_pygments_lexers==1.1.1",
    "ipywidgets==8.1.7",
    "isodate==0.7.2",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "joblib==1.5.2",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "jupyter==1.1.1",
    "jupyter-console==6.6.3",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter_client==8.6.3",
    "jupyter_core==5.8.1",
    "jupyter_server==2.17.0",
    "jupyter_server_terminals==0.5.3",
    "jupyterlab==4.4.7",
    "jupyterlab_pygments==0.3.0",
    "jupyterlab_server==2.27.3",
    "jupyterlab_widgets==3.0.15",
    "kagglehub==0.3.13",
    "kiwisolver==1.4.9",
    "lark==1.2.2",
    "lazy-object-proxy==1.12.0",
    "libcst==1.8.4",
    "linkify-it-py==2.0.3",
    "lockfile==0.12.2",
    "Mako==1.3.10",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mcp==1.14.1",
    "mdurl==0.1.2",
    "methodtools==0.4.7",
    "mistune==3.1.4",
    "mlflow==3.4.0",
    "mlflow-skinny==3.4.0",
    "mlflow-tracing==3.4.0",
    "more-itertools==10.8.0",
    "msgspec==0.19.0",
    "narwhals==2.5.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.4.5",
    "notebook_shim==0.2.4",
    "numpy==2.3.3",
    "openapi-core==0.19.5",
    "openapi-pydantic==0.5.1",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "opentelemetry-api==1.37.0",
    "opentelemetry-exporter-otlp==1.37.0",
    "opentelemetry-exporter-otlp-proto-common==1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.37.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-proto==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-semantic-conventions==0.58b0",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.2",
    "pandocfilters==1.5.1",
    "parse==1.20.2",
    "parso==0.8.5",
    "pathable==0.4.4",
    "pathspec==0.12.1",
    "pendulum==3.1.0",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "plotly==6.3.0",
    "pluggy==1.6.0",
    "prometheus_client==0.22.1",
    "prompt_toolkit==3.0.52",
    "protobuf==6.32.1",
    "psutil==7.0.0",
    "pure_eval==0.2.3",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "PyJWT==2.10.1",
    "pyparsing==3.2.4",
    "pyperclip==1.10.0",
    "python-daemon==3.1.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "pywinpty==3.0.0",
    "PyYAML==6.0.2",
    "pyzmq==27.1.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "retryhttp==1.3.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.1.0",
    "rich-argparse==1.7.1",
    "rich-rst==1.3.1",
    "rich-toolkit==0.15.1",
    "rignore==0.6.4",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "Send2Trash==1.8.3",
    "sentry-sdk==2.38.0",
    "setproctitle==1.3.7",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "SQLAlchemy==1.4.54",
    "SQLAlchemy-JSONField==1.0.2",
    "SQLAlchemy-Utils==0.42.0",
    "sqlparse==0.5.3",
    "sse-starlette==3.0.2",
    "stack-data==0.6.3",
    "starlette==0.48.0",
    "structlog==25.4.0",
    "svcs==25.1.0",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "termcolor==3.1.0",
    "terminado==0.18.1",
    "text-unidecode==1.3",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.17.4",
    "types-python-dateutil==2.9.0.20250822",
    "types-requests==2.32.4.20250913",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "uc-micro-py==1.0.3",
    "universal_pathlib==0.2.6",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "uuid6==2025.0.1",
    "uvicorn==0.35.0",
    "waitress==3.0.2",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "Werkzeug==3.1.1",
    "widgetsnbextension==4.0.14",
    "wirerope==1.0.0",
    "wrapt==1.17.3",
    "zipp==3.23.0",
    "pytest==8.4.2",
    "iniconfig==2.1.0",
    "ruff==0.13.1",
    "pre_commit==4.3.0",
    "pytest-asyncio==1.2.0",
]
authors = [{ name = "Anton Tolmachev" }]
readme = "README.md"
keywords = ["ML", "FastAPI", "Pipeline", "MLFlow"]

[tool.setuptools]
packages = ["task1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://example.com"

[project.optional-dependencies]
windows = ["pywin32==311"]
